--- a/newtonRapsonStyles.css
+++ b/newtonRapsonStyles.css
@@ -1,15 +1,22 @@
 body{
     font-size: 17px;
-    padding-left: 10px;
-    padding-bottom: 150px;
+    padding-top: 50px;
     color: #000;
     background-color: #fff;
     font-weight: bold;
     background-color: rgb(128, 154, 233);
+    display: block;
+    margin: auto;
+    width: 50%;
+    padding-bottom: 50px;
 }
+/* table {
+    border: 10px solid black;
+} */
 .table tr td{
     padding-right: 50px;
     padding-bottom: 5px;
+    padding-left: 5px;
     background-color: #58f;
     border: #000 2px solid;
 }
@@ -29,3 +36,4 @@ div img{
     padding-left: 400px;
     padding-bottom: 1px;
 }
+
